# robot_system

./: CMakeLists.txt  package.xml
config/: bno055_params.yaml  mapper_params.yaml  nav2_params.yaml
description/: robot.xacro  robot_simulation.xacro
launch/: bno055_launch.py  lidar_launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  robot_simulaton.py  rsp_launch.py
scripts/: joy_control.py  omni_controller.py  robot_control_simulation.py
world/: map_maze.world
